@@ -1,9 +1,9 @@
 # --
-# Kernel/System/CustomerAuth/HTTPBasicAuth.pm - provides the $ENV{REMOTE_USER}
+# Kernel/System/CustomerAuth/HTTPBasicAuth.pm - provides the $ENV authntication
 # authentification
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: HTTPBasicAuth.pm,v 1.8 2008-02-20 22:10:14 martin Exp $
+# $Id: HTTPBasicAuth.pm,v 1.9 2008-03-21 02:00:05 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -14,7 +14,7 @@
 # If you use this module, you should use as fallback the following
 # config settings:
 #
-# If use isn't login through apache ($ENV{REMOTE_USER})
+# If use isn't login through apache ($ENV{REMOTE_USER} or $ENV{HTTP_REMOTE_USER})
 # $Self->{CustomerPanelLoginURL} = 'http://host.example.com/not-authorised-for-otrs.html';
 #
 # $Self->{CustomerPanelLogoutURL} = 'http://host.example.com/thanks-for-using-otrs.html';
@@ -26,7 +26,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.8 $) [1];
+$VERSION = qw($Revision: 1.9 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -68,7 +68,7 @@ sub Auth {
     my ( $Self, %Param ) = @_;
 
     # get params
-    my $User = $ENV{REMOTE_USER};
+    my $User = $ENV{REMOTE_USER} || $ENV{HTTP_REMOTE_USER};
     my $RemoteAddr = $ENV{REMOTE_ADDR} || 'Got no REMOTE_ADDR env!';
     if ($User) {
         my $Replace = $Self->{ConfigObject}->Get(
@@ -86,7 +86,7 @@ sub Auth {
     else {
         $Self->{LogObject}->Log(
             Priority => 'notice',
-            Message  => "User: No \$ENV{REMOTE_USER} !(REMOTE_ADDR: $RemoteAddr).",
+            Message  => "User: No \$ENV{REMOTE_USER} or \$ENV{HTTP_REMOTE_USER} !(REMOTE_ADDR: $RemoteAddr).",
         );
         return;
     }
