@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.608 2008-03-20 22:53:03 martin Exp $
+# $Id: CHANGES,v 1.609 2008-03-21 02:00:05 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2008/03/21) Added enhancement bug# 2773 - HTTPBasicAuth fails when only
+    HTTP_REMOTE_USER is populated (not REMOTE_USER).
  - (2008/03/18) Fixed mssql/sybase/freetds database problem
     "Setting of CS_OPT_TEXTSIZE failed. at" if a mssql customer backend
     is used. The problem is, that LongReadLen is not supported by
